set average rate bug fix, and improvements
